# score-fulldome-raytracing

./: CMakeLists.txt  README.md  score_addon_qvkrt.cpp  score_addon_vkfrt.cpp  score_addon_vkfrt.hpp
QVKRT/: Executor.cpp  Metadata.hpp  Node.cpp  Node.hpp  Ply.cpp  Ply.hpp  PlyLoader.cpp  PlyLoader.hpp  PlyLoaderExecutor.cpp  PlyLoaderExecutor.hpp  PlyLoaderMetadata.hpp  Process.cpp  Process.hpp  TinyObj.cpp  TinyObj.hpp  load_ply.cpp  load_ply.hpp
QVKRT/rt/: load_ply.cpp  load_ply.h  rt.cpp  rt.hpp
QVKRT/rt/shaders/: closesthit.rchit  closesthit.rchit.spv  raygen_pointcloud.rgen  raygen_pointcloud.rgen.spv  shaders.qrc
fulldome_voxel/: Executor.cpp  Executor.hpp  Layer.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp  Process.hpp
fulldome_voxel/vk_raytracing/: vk_voxel_raytracing.cpp  vk_voxel_raytracing.hpp
fulldome_voxel/vk_raytracing/shaders/: miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
